--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -3,9 +3,11 @@
 	padding-bottom 5rem
 	font-family $main-font
 	&--first-after-menu
-		margin-top 88px
+		padding-top 10.5rem
 	&--without-padding-top
 		padding-top 0
+	&--small-padding-bottom
+		padding-bottom 3.125rem
 	&--without-title
 		padding-top 0
 	&--dark
@@ -13,7 +15,7 @@
 			color #fefefe
 		.section__text
 			color #576076
-	&--blue
+	&--main-color
 		background-color $main-color
 	&--bottom-with-gradient
 		bottom-with-gradient(#4444b9, #ec523e)
@@ -36,6 +38,13 @@
 	font-size 16px
 	text-align center
 	color #8492af
+	
+.section__btn
+	display block
+	width 85%
+	margin 0 auto
+	svg
+		margin-left 0.7rem
 	
 @media $tablet-widths
 	
