--- a/styl/index.styl
+++ b/styl/index.styl
@@ -16,6 +16,8 @@
 @import "blocks/slider"
 @import "blocks/portfolio-item"
 @import "blocks/tag"
+@import "blocks/projects-gallery"
+@import "blocks/project-item"
 @import "blocks/page-footer"
 @import "blocks/subscribe"
 @import "blocks/contact-us"
