--- a/contact-us/b-index.jade
+++ b/contact-us/b-index.jade
@@ -14,43 +14,45 @@ html(lang="en")
 					.section__wrapper
 						h1.section__title Contact Us
 						p.section__text We would love to hear what projects, ideas, endeavours you have! Fill in the form and we'll get back as soon as we can!
-					
-				section.section.contact-us
-					.contact-us__wrapper
-						h2.section__title.contact-us__title Send Us a Message
-						form.contact-us__form(name="contactForm" action="/mail-us" method="post")
-							.contact-us__input-wrapper.input-box
-								input(type="text" placeholder="Name" name="name" required)
-							.contact-us__input-wrapper.input-box
-								input(type="email" placeholder="Email" name="email" required)
-							.contact-us__input-wrapper.input-box
-								input(type="tel" placeholder="Phone Number (optional)" name="phone")
-							.contact-us__input-wrapper.input-box
-								textarea(name="message" rows="5" placeholder="Message")
-							button.contact-us__btn.btn(type="submit") Send Email
+						
+				.page-content__wrapper
+					section.section.contact-us
+						.contact-us__wrapper
+							h2.section__title.contact-us__title Send Us a Message
+							form.contact-us__form(name="contactForm" action="/mail-us" method="post")
+								.contact-us__input-wrapper.input-box
+									input(type="text" placeholder="Name" name="name" required)
+								.contact-us__input-wrapper.input-box
+									input(type="email" placeholder="Email" name="email" required)
+								.contact-us__input-wrapper.input-box
+									input(type="tel" placeholder="Phone Number (optional)" name="phone")
+								.contact-us__input-wrapper.input-box
+									textarea(name="message" rows="5" placeholder="Message")
+								button.contact-us__btn.btn(type="submit") Send Email
 
-				section.section.section--without-padding-top.contact-info
-					.contact-info__wrapper
-						h2.section__title.contact-info__title Contact Details
-						.contact-info__item-inner
-							include ../icons/address
-							address.contact-info__address Kiev, Ukraine, 02140, <br>Bazhana Ave 24/1
-						.contact-info__item-inner
-							include ../icons/phone
-							span.contact-info__phone
-								a(href="tel:380955914765") +38 095 591 4765
-						.contact-info__item-inner
-							include ../icons/mail
-							span.contact-info__email
-								a(href="mailto:info@uneedweb.com?subject=Contact Uneed Web") info@uneedweb.com
-						.social
-							ul.social__list
-								li.social__item
-									a(href="https://www.facebook.com/uneedweb/" target="_blank")
-										img(src="/images/png/services/facebook.png", alt="facebook icon", width="35")
-								li.social__item
-									a(href="https://www.linkedin.com/company/18188825/" target="_blank")
-										img(src="/images/png/services/linkedin.png", alt="linkedin icon", width="35")
+					section.section.section--without-padding-top.contact-info
+						.contact-info__wrapper
+							h2.section__title.contact-info__title Contact Details
+							.contact-info__items-wrapper
+								.contact-info__item-inner
+									include ../icons/address
+									address.contact-info__address Kiev, Ukraine, 02140, <br>Bazhana Ave 24/1
+								.contact-info__item-inner
+									include ../icons/phone
+									span.contact-info__phone
+										a(href="tel:380955914765") +38 095 591 4765
+								.contact-info__item-inner
+									include ../icons/mail
+									span.contact-info__email
+										a(href="mailto:info@uneedweb.com?subject=Contact Uneed Web") info@uneedweb.com
+							.social
+								ul.social__list
+									li.social__item
+										a(href="https://www.facebook.com/uneedweb/" target="_blank")
+											img(src="/images/png/services/facebook.png", alt="facebook icon", width="35")
+									li.social__item
+										a(href="https://www.linkedin.com/company/18188825/" target="_blank")
+											img(src="/images/png/services/linkedin.png", alt="linkedin icon", width="35")
 
 			include ../parts/b-footer
 		script.
