--- a/styl/blocks/slider.styl
+++ b/styl/blocks/slider.styl
@@ -1,2 +1,69 @@
+.slider
+	overflow hidden
+	
+.slider__switcher
+	display flex
+	justify-content space-between
+	margin-bottom 1rem
+	border-bottom 1px solid #e4e4f1
+
+.slider__switch-btn
+	width 2rem
+	height 2rem
+	padding 0
+	background-color transparent
+	border none
+	outline none
+	cursor pointer
+	&--next
+		svg
+			transform rotate(180deg)
+	
+.slider__slide-name
+	position relative
+	display none
+	padding 0
+	margin 0
+	font-size 14px
+	font-weight 400
+	letter-spacing 0.3px
+	text-transform uppercase
+	text-align center
+	color #8492af
+	&::after
+		content ""
+		position absolute
+		bottom -1px
+		left 0
+		width 100%
+		height 2px
+		background-color #8492af
+	&--active
+		display block
+		
 .slider__slides-wrapper
 	ul-reset()
+	display flex
+	width 300%
+	transition all 0.3s ease
+
+.slider__slide
+	width 100%
+	
+.slider__dots
+	display flex
+	justify-content center
+	margin-bottom 1.5rem
+	
+.slider__dot
+	width 10px
+	height 10px
+	padding 0
+	margin 0.5rem
+	background-color #f3f8ff
+	border solid 1px #e3eaf3
+	border-radius 50%
+	outline none
+	&--active
+		background-color #8492af
+		border solid 1px #778ab4
