--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -10,6 +10,7 @@ $main-color = #0e1a35
 
 $tablet-widths = "(min-width: 768px)"
 $desktop-widths = "(min-width: 1200px)"
+$desktop-large-widths = "(min-width: 1400px)"
 $mobile-widths-only = "(max-width: 767px)"
 
 $retina = "(min-resolution: 144dpi), (min-resolution: 1.5dppx)"
