--- a/parts/b-footer.jade
+++ b/parts/b-footer.jade
@@ -4,11 +4,11 @@ footer.page-footer
 			.main-nav__list-wrapper
 				ul.main-nav__list
 					li.main-nav__item
-						a(href="/services") Services
+						a(href="/services/b-index.html") Services
 					li.main-nav__item
-						a(href="/portfolio") Portfolio
+						a(href="/portfolio/b-index.html") Portfolio
 					li.main-nav__item
-						a(href="/contact-us") Contact Us
+						a(href="/contact-us/b-index.html") Contact Us
 		.page-footer__subscribe.subscribe
 			h2.subscribe__title Get in touch with us
 			form.subscribe__form
