--- a/parts/b-header.jade
+++ b/parts/b-header.jade
@@ -7,18 +7,18 @@ mixin b-header(modifier, title, text)
 		nav.main-nav.main-nav--top.main-nav--closed
 			.main-nav__wrapper
 				.main-nav__logo.logo
-						a(href="/")
+						a(href="/b-index.html")
 							include ../icons/logo
 							include ../icons/logo-text
 				button.main-nav__toggle(type="button")
 			.main-nav__list-wrapper
 				ul.main-nav__list
 					li.main-nav__item
-						a(href="/services") Services
+						a(href="/services/b-index.html") Services
 					li.main-nav__item
-						a(href="/portfolio") Portfolio
+						a(href="/portfolio/b-index.html") Portfolio
 					li.main-nav__item
-						a(href="/contact-us") Contact Us	
+						a(href="/contact-us/b-index.html") Contact Us	
 		.page-header__wrapper
 			- if (title)
 				h1.page-header__title #{title}
