--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -15,67 +15,68 @@ html(lang="en")
 						h1.section__title Portfolio
 						p.section__text We have a proven track record of building high-quality solutions for customers all over the world. Browse through our case studies and see projects that we have implemented.
 
-				section.section
+				section.section.section--without-padding-top
 					.projects-gallery
-						.slider__switcher
-							button.slider__switch-btn.slider__switch-btn--prev(type="button")
-								include ../icons/left-arrow
-							h3.slider__slide-name.slider__slide-name--active All
-							h3.slider__slide-name Web Development
-							h3.slider__slide-name Mobile Development
-							h3.slider__slide-name Product Design
-							button.slider__switch-btn.slider__switch-btn--next(type="button")
-								include ../icons/left-arrow
-						ul.projects-gallery__list
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Web Development
-									h4.project-item__title Booking
-									p.project-item__descr Development of a web application for a travel company with a complete 			customer planning journey features.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Web Development
-									h4.project-item__title Entertainment
-									p.project-item__descr Development a web application for a sports betting company for the audience of 5 million users.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Mobile Development
-									h4.project-item__title Travel
-									p.project-item__descr Our own mobile application that keeps track of the places you visit and shows your exploration progress.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Web Development
-									h4.project-item__title Banking / Finance
-									p.project-item__descr Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Web Development
-									h4.project-item__title Gambling
-									p.project-item__descr Revamping of existing gambling web applications for a betting company with interactive components.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Web Development
-									h4.project-item__title Social Network
-									p.project-item__descr Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
-							li.project-item
-								.project-item__wrapper
-									span.project-item__type Web Development
-									h4.project-item__title Data Management
-									p.project-item__descr Localisation helper: a software that eases the translation of an online sports application into multiple languages.
-									a.project-item__link-btn.btn Details
-										include ../icons/arrow-go
+						.projects-gallery__wrapper
+							.slider__switcher
+								button.slider__switch-btn.slider__switch-btn--prev(type="button")
+									include ../icons/left-arrow
+								h3.slider__slide-name.slider__slide-name--active All
+								h3.slider__slide-name Web Development
+								h3.slider__slide-name Mobile Development
+								h3.slider__slide-name Product Design
+								button.slider__switch-btn.slider__switch-btn--next(type="button")
+									include ../icons/left-arrow
+							ul.projects-gallery__list
+								li.project-item.project-item--booking
+									.project-item__wrapper
+										span.project-item__type Web Development
+										h4.project-item__title Booking
+										p.project-item__descr Development of a web application for a travel company with a complete customer planning journey features.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
+								li.project-item.project-item--entertaiment
+									.project-item__wrapper
+										span.project-item__type Web Development
+										h4.project-item__title Entertainment
+										p.project-item__descr Development a web application for a sports betting company for the audience of 5 million users.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
+								li.project-item.project-item--travel
+									.project-item__wrapper
+										span.project-item__type Mobile Development
+										h4.project-item__title Travel
+										p.project-item__descr Our own mobile application that keeps track of the places you visit and shows your exploration progress.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
+								li.project-item.project-item--banking
+									.project-item__wrapper
+										span.project-item__type Web Development
+										h4.project-item__title Banking / Finance
+										p.project-item__descr Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
+								li.project-item.project-item--gambling
+									.project-item__wrapper
+										span.project-item__type Web Development
+										h4.project-item__title Gambling
+										p.project-item__descr Revamping of existing gambling web applications for a betting company with interactive components.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
+								li.project-item.project-item--social
+									.project-item__wrapper
+										span.project-item__type Web Development
+										h4.project-item__title Social Network
+										p.project-item__descr Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
+								li.project-item.project-item--data
+									.project-item__wrapper
+										span.project-item__type Web Development
+										h4.project-item__title Data Management
+										p.project-item__descr Localisation helper: a software that eases the translation of an online sports application into multiple languages.
+										a.project-item__link-btn.btn Details
+											include ../icons/arrow-go
 			include ../parts/b-footer
 		script.
 			(function() {
