--- a/styl/blocks/main-features-item.styl
+++ b/styl/blocks/main-features-item.styl
@@ -1,4 +1,4 @@
-.features-item
+.main-features-item
 	display flex
 	align-items center
 	justify-content flex-start
@@ -8,7 +8,7 @@
 		svg
 			flex-shrink 0
 
-.features-item__descr
+.main-features-item__descr
 	margin-left 1.25rem
 	font-size 16px
 	font-weight 400
@@ -18,5 +18,5 @@
 	
 @media $tablet-widths
 
-	.features-item__descr
+	.main-features-item__descr
 		margin 1.25rem
