--- a/styl/blocks/main-features.styl
+++ b/styl/blocks/main-features.styl
@@ -1,7 +1,7 @@
-.features
+.main-features
 	margin-top 3.125rem
 
-.features__list
+.main-features__list
 	ul-reset()
 	display flex
 	flex-wrap wrap
@@ -10,5 +10,5 @@
 	
 @media $tablet-widths
 
-	.features__item
+	.main-features__item
 		width 50%
