--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -48,7 +48,7 @@
 		width 100%
 		min-height 5.5rem
 		z-index 2
-		background-color #0e1a35
+		// background-color #0e1a35
 		.main-nav__list
 			position absolute
 			top 0
