--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -7,6 +7,13 @@
 		background-image url("../photos/landing-small.jpg")
 		background-repeat no-repeat
 		background-size cover
+	&--project
+		min-height 17rem
+		background-repeat no-repeat
+	&--on-game
+		background-image url("../photos/on-game/bg.jpg")
+		background-size 300%
+		background-position center
 
 .page-header__wrapper
 	wrapper()
