--- a/styl/index.styl
+++ b/styl/index.styl
@@ -4,6 +4,7 @@
 @import "blocks/btn"
 @import "blocks/input-box"
 @import "blocks/link"
+@import "blocks/tags"
 @import "blocks/page-wrapper"
 @import "blocks/page-header"
 @import "blocks/logo"
@@ -11,11 +12,10 @@
 @import "blocks/page-content"
 @import "blocks/section"
 @import "blocks/services"
-@import "blocks/features"
-@import "blocks/features-item"
+@import "blocks/main-features"
+@import "blocks/main-features-item"
 @import "blocks/slider"
 @import "blocks/portfolio-item"
-@import "blocks/tag"
 @import "blocks/projects-gallery"
 @import "blocks/project-item"
 @import "blocks/page-footer"
@@ -23,3 +23,5 @@
 @import "blocks/contact-us"
 @import "blocks/contact-info"
 @import "blocks/social"
+@import "blocks/on-game-score-block"
+@import "blocks/project-features"
