--- a/contact-us/b-index.jade
+++ b/contact-us/b-index.jade
@@ -55,6 +55,7 @@ html(lang="en")
 											img(src="/images/png/services/linkedin.png", alt="linkedin icon", width="35")
 
 			include ../parts/b-footer
+			+b-footer("main")
 		script.
 			(function() {
 				var navMain = document.querySelector('.main-nav');
