--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -40,7 +40,7 @@ html(lang="en")
 										span.project-item__type Web Development
 										h4.project-item__title Entertainment
 										p.project-item__descr Development a web application for a sports betting company for the audience of 5 million users.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/on-game") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--travel
 									.project-item__wrapper
@@ -78,6 +78,7 @@ html(lang="en")
 										a.project-item__link-btn.btn Details
 											include ../icons/arrow-go
 			include ../parts/b-footer
+			+b-footer("main")
 		script.
 			(function() {
 				var navMain = document.querySelector('.main-nav');
