--- a/styl/blocks/btn.styl
+++ b/styl/blocks/btn.styl
@@ -14,6 +14,9 @@
 	border-radius 4px
 	transition all 0.3s
 	cursor pointer
+	&--on-game
+		color #555
+		border-color #555
 	svg
 		*
 			transition all 0.3s
