--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -2,7 +2,16 @@
 	padding-top 3.125rem
 	padding-bottom 2.5rem
 	font-family $main-font
-	background-color $main-color
+	color #576076
+	a
+		color #576076
+	&--main
+		background-color $main-color
+	&--on-game
+		color #6a6a6a
+		background-color $main-color--on-game
+		a
+			color #6a6a6a
 	
 .page-footer__wrapper
 	wrapper()
@@ -22,7 +31,6 @@
 	font-weight 400
 	font-style normal
 	letter-spacing 0.3px
-	color #576076
 
 .page-footer__phone
 	a
@@ -31,8 +39,7 @@
 		font-weight 400
 		letter-spacing 0.3px
 		text-decoration none
-		color #576076
-		
+
 .page-footer__email
 	a
 		display block
@@ -40,7 +47,6 @@
 		font-weight 400
 		letter-spacing 0.3px
 		text-decoration none
-		color #576076
 		
 .page-footer__copyrights
 	padding 0
@@ -49,7 +55,6 @@
 	font-weight 400
 	letter-spacing 0.3px
 	text-align center
-	color #576076
 	
 @media $tablet-widths
 
