--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -6,7 +6,9 @@
 // $screenXLarge = 1400px
 
 $main-font = Roboto
+
 $main-color = #0e1a35
+$main-color--on-game = #333
 
 $tablet-widths = "(min-width: 768px)"
 $desktop-widths = "(min-width: 1200px)"
