--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -73,22 +73,22 @@ html(lang="en")
 								h3.project-features__item-title Performance Improvement
 								p.project-features__item-descr Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
 
-				section.section.section--on-game-big-section
+				section.section.section--without-padding-bottom.section--on-game-big-section
 					section.section.section--without-padding-top.section--without-padding-bottom
 						.section__wrapper
 							h2.section__title Variety of sports
 							p.section__text Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
-						.section__decorative-img.section__decorative-img--phone-1
-					section.section.section--without-padding-bottom
+						.section__decorative-img.section__decorative-img--on-game-phone-1
+					section.section.section--without-padding-top.section--without-padding-bottom
 						.section__wrapper
 							h2.section__title Real-time updates
 							p.section__text Development a web application for a sports betting company for the audience of 5 million users. Improve desktop app performance two folds and mobile app performance from 30 seconds to 10 seconds.
-						.section__decorative-img.section__decorative-img--phone-2
-					section.section.section--without-padding-bottom
+						.section__decorative-img.section__decorative-img--on-game-phone-2
+					section.section.section--without-padding-top.section--without-padding-bottom
 						.section__wrapper
 							h2.section__title Statistics
 							p.section__text Based on client requirements, our team developed a technological complex web application that gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through the extension to existing IPTV software.
-						.section__decorative-img.section__decorative-img--phone-3
+						.section__decorative-img.section__decorative-img--on-game-phone-3
 
 				section.section.section--on-game-technologies
 					.section__wrapper
