--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -14,7 +14,9 @@
 			color #6a6a6a
 	
 .page-footer__wrapper
-	wrapper()
+	// wrapper()
+	width 90%
+	margin 0 auto
 	text-align center
 	
 .page-footer__main-nav
@@ -56,11 +58,11 @@
 	letter-spacing 0.3px
 	text-align center
 	
-@media $tablet-widths
+// @media $tablet-widths
 
-	.page-footer__subscribe
-		width 60%
-		margin 0 auto
+// 	.page-footer__subscribe
+// 		width 60%
+// 		margin 0 auto
 		
 @media $desktop-widths
 
@@ -75,8 +77,8 @@
 		align-items flex-start
 		margin-bottom 0
 		
-	.page-footer__subscribe
-		width auto
+	// .page-footer__subscribe
+	// 	width auto
 		
 	.page-footer__contact
 		margin 0
