--- a/styl/blocks/project-item.styl
+++ b/styl/blocks/project-item.styl
@@ -1,6 +1,6 @@
 .project-item
 	position relative
-	max-width 24rem
+	width 100%
 	min-height 25rem
 	background-repeat no-repeat
 	background-size cover
@@ -74,6 +74,11 @@
 	color: rgba(248,249,251,.5);
 	transition all 0.3s
 	
+@media $tablet-widths
+
+	.project-item
+		width 50%
+		
 @media $desktop-widths
 
 	.project-item
