--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -1,44 +1,5 @@
 .main-nav
 	font-family $main-font
-	&--closed
-		.main-nav__toggle
-			&::before
-				content ""
-				position absolute
-				top 16px
-				left 50%
-				transform translateX(-50%)
-				width 2.3rem
-				height 4px
-				background-color #fff
-				border-radius 2px
-				box-shadow 0 10px 0 0 #fff, 0 20px 0 0 #fff
-
-		.main-nav__list
-			opacity 0
-			transform translateY(-100%)
-
-	&--opened
-		.main-nav__toggle
-			&::before,
-			&::after
-				content ""
-				position absolute
-				top 50%
-				left 50%
-				width 2rem
-				height 4px
-				background-color #fff
-				border-radius 2px
-			&::before
-				transform translate(-50%, -50%) rotate(45deg)
-				box-shadow none      
-			&::after
-				transform translate(-50%, -50%) rotate(-45deg)
-				
-		.main-nav__list
-			opacity 1
-			transform translateY(0)
 			
 	&--top
 		position absolute
@@ -50,11 +11,11 @@
 		z-index 2
 		// background-color #0e1a35
 		.main-nav__list
-			position absolute
+			position fixed
 			top 0
 			left 0
 			flex-direction column
-			width 100%
+			width 100vw
 			height 100vh
 			padding-top 4rem
 			background-color rgba(#0e1a35, 0.97)
@@ -72,22 +33,14 @@
 			flex-direction column
 
 .main-nav__wrapper
-	wrapper()
+	width 90%
+	margin 0 auto
 	display flex
+	align-items center
 	justify-content space-between
 
 .main-nav__toggle
-	position relative
-	width 63px
-	height 55px
-	margin 0
-	padding 0
-	font-size 0
-	background-color transparent
-	border none
-	z-index 4
-	&::before, &::after
-		transition all 0.3s
+	display none
 	
 .main-nav__list
 	ul-reset()
@@ -105,6 +58,89 @@
 		transition all 0.3s
 		&:hover, &:active
 			color #c3cee4
+
+@media $mobile-widths-only
+
+	.main-nav
+		&--closed
+			.main-nav__toggle
+				&::before
+					content ""
+					position absolute
+					top 16px
+					left 50%
+					transform translateX(-50%)
+					width 2.3rem
+					height 4px
+					background-color #fff
+					border-radius 2px
+					box-shadow 0 10px 0 0 #fff, 0 20px 0 0 #fff
+
+			.main-nav__list
+				opacity 0
+				transform translateY(-100%)
+
+		&--opened
+			.main-nav__toggle
+				position fixed
+				right 5%
+				&::before,
+				&::after
+					content ""
+					position absolute
+					top 50%
+					left 50%
+					width 2rem
+					height 4px
+					background-color #fff
+					border-radius 2px
+				&::before
+					transform translate(-50%, -50%) rotate(45deg)
+					box-shadow none      
+				&::after
+					transform translate(-50%, -50%) rotate(-45deg)
+
+			.main-nav__list
+				opacity 1
+				transform translateY(0)
+				
+	.main-nav__toggle
+		position relative
+		display block
+		width 63px
+		height 55px
+		margin 0
+		padding 0
+		font-size 0
+		background-color transparent
+		border none
+		z-index 4
+		&::before, &::after
+			transition all 0.3s
+
+@media $tablet-widths
+
+	.main-nav
+		&--top
+			.main-nav__list
+				position static
+				flex-direction row
+				justify-content space-between
+				width 17rem
+				height auto
+				padding-top 0
+				background-color transparent
+				opacity 1
+				transform none
+				transition none
+				
+			.main-nav__item
+				a
+					padding 0
+					font-size 15px
+					text-transform none
+					letter-spacing 0.3px
+					color #ffffff
 		
 @media $desktop-widths
 
@@ -115,9 +151,11 @@
 			.main-nav__list-wrapper
 				display flex
 				justify-content center
+				
 			.main-nav__list
 				flex-direction row
 				flex-wrap wrap
+				
 			.main-nav__item
 				margin-right 1.5rem
 				a
