--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -1,5 +1,23 @@
 .project-features
 	background-image linear-gradient(to bottom, #ffe244, #d7bb0e)
+	&--on-game
+		.project-features__item
+			&:nth-child(n+2)
+				padding-top 7.8rem
+				.project-features__icon-wrapper
+					top 55px
+					&::before
+						content ""
+						position absolute
+						bottom 120%
+						left 43%
+						width 2px
+						height 47px
+						background-color #555
+						
+		.project-features__icon-wrapper
+			left 51%
+			transform translateX(-51%)
 	
 .project-features__list
 	ul-reset()
@@ -8,25 +26,12 @@
 	position relative
 	padding-bottom 1rem
 	padding-top 4rem
-	&:nth-child(n+2)
-		padding-top 7.8rem
-		.project-features__icon-wrapper
-			top 55px
-			&::before
-				content ""
-				position absolute
-				bottom 120%
-				left 43%
-				width 2px
-				height 47px
-				background-color #555
-	
 
 .project-features__icon-wrapper
 	position absolute
 	top 0
-	left 51%
-	transform translateX(-51%)
+	left 50%
+	transform translateX(-50%)
 	
 	
 .project-features__item-title
@@ -47,3 +52,62 @@
 	letter-spacing 0.3px
 	text-align center
 	color #555555
+	
+@media $tablet-widths
+
+	.project-features
+		&--on-game
+			.project-features__list
+				box-sizing border-box
+				width 26rem
+				margin 0 auto
+				
+			.project-features__item
+				padding-top 0
+				padding-bottom 0
+				padding-left 4.5rem
+				margin-bottom 3.2rem
+				&:nth-child(n+2)
+					padding-top 0
+					.project-features__icon-wrapper
+						top 50%
+						left 0
+						&::before
+							height 87px
+				&:nth-child(1)
+					.project-features__icon-wrapper
+						left 5px
+				&:nth-child(2)
+					.project-features__icon-wrapper
+						top 35%
+				&:nth-child(3)
+					.project-features__icon-wrapper
+						top 10%
+						left 5px
+						&::after
+							content ""
+							position absolute
+							top 120%
+							left 43%
+							width 2px
+							height 39px
+							background-color #555
+			
+			.project-features__icon-wrapper
+				left 0
+				top 45%
+				transform translateX(0)
+				&::before
+					content ""
+					position absolute
+					bottom 120%
+					left 43%
+					width 2px
+					height 54px
+					background-color #555
+				
+			.project-features__item-title
+				text-align left
+				
+			.project-features__item-descr
+				text-align left
