--- a/styl/blocks/on-game-score-block.styl
+++ b/styl/blocks/on-game-score-block.styl
@@ -1,6 +1,6 @@
 .on-game-score-block__logos
 	position relative
-	min-height 206px
+	height 206px
 	background-image url("../images/on-game/image-bg.png")
 	background-repeat no-repeat
 	background-size cover
@@ -56,3 +56,12 @@
 		font-size 16px
 		text-align center
 		color #555555
+		
+@media $tablet-widths
+
+	.on-game-score-block
+		width 25.125rem
+		margin 0 auto
+
+	.on-game-score-block__logos
+		height 259px
