--- a/styl/index.styl
+++ b/styl/index.styl
@@ -23,5 +23,6 @@
 @import "blocks/contact-us"
 @import "blocks/contact-info"
 @import "blocks/social"
+@import "blocks/project-switcher"
 @import "blocks/on-game-score-block"
 @import "blocks/project-features"
